--- a/package.json
+++ b/package.json
@@ -3,25 +3,39 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "npm run clean && npm run build:webpack",
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
+    "crossfilter": "^1.3.12",
+    "d3": "^4.7.3",
+    "d3-tip": "^0.7.1",
+    "datatable": "^2.0.2",
+    "dc": "^2.1.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-expose": "~0.3.4",
     "jade": "~1.11.0",
+    "jade-loader": "^0.8.0",
+    "jquery": "^3.2.1",
     "morgan": "~1.6.1",
+    "msa": "^1.0.3",
+    "nouislider": "^9.2.0",
     "require-dir": "^0.3.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
