--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bootstrap-multiselect": "^0.9.13-1",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "crossfilter": "^1.3.12",
     "d3": "^4.7.3",
     "d3-tip": "^0.7.1",
     "datatable": "^2.0.2",
+    "datatables.net": "^1.10.13",
+    "datatables.net-dt": "^1.10.13",
     "dc": "^2.1.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-expose": "~0.3.4",
+    "import-loader": "^1.0.1",
     "jade": "~1.11.0",
     "jade-loader": "^0.8.0",
     "jquery": "^3.2.1",
