--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "bootstrap-multiselect": "^0.9.13-1",
+    "bootstrap-toggle": "^2.2.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "crossfilter": "^1.3.12",
