--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-expose": "~0.3.4",
+    "express-static-zip": "^0.2.2",
     "import-loader": "^1.0.1",
     "jade": "~1.11.0",
     "jade-loader": "^0.8.0",
