--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-multiselect": "^0.9.13-1",
     "bootstrap-toggle": "^2.2.2",
+    "chroma-js": "^1.2.2",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "crossfilter": "^1.3.12",
