--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "datatables.net": "^1.10.13",
     "datatables.net-dt": "^1.10.13",
     "dc": "^2.1.3",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "express": "~4.13.1",
     "express-expose": "~0.3.4",
     "import-loader": "^1.0.1",
@@ -30,7 +30,7 @@
     "jade-loader": "^0.8.0",
     "jquery": "^3.2.1",
     "jquery.panzoom": "^3.2.2",
-    "morgan": "~1.6.1",
+    "morgan": ">=1.9.1",
     "msa": "^1.0.3",
     "nouislider": "^9.2.0",
     "require-dir": "^0.3.0",
