--- a/package.json
+++ b/package.json
@@ -4,49 +4,52 @@
   "description": "pan-genome-visualization",
   "private": true,
   "scripts": {
-    "build": "npm run clean && npm run build:webpack",
-    "start": "node ./bin/www"
+    "build": "NODE_ENV=production npm run build:webpack && NODE_ENV=production npm run build:gulp",
+    "build:webpack": "NODE_ENV=production webpack --env production",
+    "build:gulp": "NODE_ENV=production gulp",
+    "start": "NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "bootstrap": "^3.3.7",
-    "bootstrap-multiselect": "^0.9.13-1",
-    "bootstrap-toggle": "^2.2.2",
-    "chroma-js": "^1.2.2",
-    "compression": "^1.6.2",
-    "cookie-parser": "~1.3.5",
-    "crossfilter": "^1.3.12",
-    "d3": "^3.5.17",
-    "d3-tip": "^0.7.1",
-    "datatable": "^2.0.2",
-    "datatables.net": "^1.10.13",
-    "datatables.net-dt": "^1.10.13",
-    "dc": "^2.1.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "express-expose": "~0.3.4",
-    "import-loader": "^1.0.1",
-    "jade": "~1.11.0",
-    "jade-loader": "^0.8.0",
-    "jquery": "^3.2.1",
-    "jquery.panzoom": "^3.2.2",
-    "morgan": "~1.6.1",
-    "msa": "^1.0.3",
-    "nouislider": "^9.2.0",
-    "require-dir": "^0.3.0",
-    "serve-favicon": "~2.3.0",
-    "svg-pan-zoom": "^3.5.0"
+    "body-parser": "1.13.2",
+    "bootstrap": "3.3.7",
+    "bootstrap-multiselect": "0.9.13-1",
+    "bootstrap-toggle": "2.2.2",
+    "chroma-js": "1.2.2",
+    "compression": "1.6.2",
+    "cookie-parser": "1.3.5",
+    "crossfilter": "1.3.12",
+    "d3": "3.5.17",
+    "d3-tip": "0.7.1",
+    "datatable": "2.0.2",
+    "datatables.net": "1.10.13",
+    "datatables.net-dt": "1.10.13",
+    "dc": "2.1.3",
+    "debug": "2.2.0",
+    "express": "4.13.1",
+    "express-expose": "0.3.4",
+    "import-loader": "1.0.1",
+    "jade": "1.11.0",
+    "jade-loader": "0.8.0",
+    "jquery": "3.2.1",
+    "jquery.panzoom": "3.2.2",
+    "morgan": "1.6.1",
+    "msa": "1.0.3",
+    "nouislider": "9.2.0",
+    "require-dir": "0.3.2",
+    "serve-favicon": "2.3.0",
+    "svg-pan-zoom": "3.5.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "datatables.net-colreorder": "^1.3.3",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4",
-    "webpack": "^2.1.0-beta.22",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "babel": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "datatables.net-colreorder": "1.3.3",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-minify-css": "1.2.4",
+    "gulp-rename": "1.2.2",
+    "gulp-uglify": "3.0.2",
+    "webpack": "2.2.1",
+    "webpack-dev-middleware": "1.10.1",
+    "webpack-hot-middleware": "2.17.1"
   }
 }
