--- a/config/docker/nginx/files/etc/nginx/nginx.conf
+++ b/config/docker/nginx/files/etc/nginx/nginx.conf
@@ -5,10 +5,6 @@ events {
   multi_accept on;
 }
 
-# Allows to run nginx as non-root
-pid /tmp/nginx.pid;
-
-
 http {
   sendfile on;
 
@@ -21,17 +17,11 @@ http {
   include include/mime-types.conf;
   default_type application/octet-stream;
 
-  server {
-    server_name _;
-    listen 8080;
+  # Serve certbot's ACME challenge for SSL certificates renewal.
+  include http.conf;
 
-    include include/security-headers.conf;
-
-    include include/compression-settings.conf;
-
-    location / {
-      proxy_pass http://pangenome-node:3000;
-      include include/proxy-settings.conf;
-    }
-  }
+  # Serves the app over `https://`.
+  # This line will be uncommented by `cerbot.sh` script when certificates 
+  # are generated for the first time
+  # include https.conf;
 }
