--- a/config/docker/nginx/Dockerfile
+++ b/config/docker/nginx/Dockerfile
@@ -11,23 +11,26 @@ ENV USER=${USER}
 ENV GROUP=${GROUP}
 
 RUN set -x \
-  && if ! grep -q -E "^${GROUP}" /etc/group && [ "$(getent group ${GID})" == ""]; then addgroup --gid "${GID}" "${GROUP}"; fi \
-  && if ! grep -q -E "^${USER}:" /etc/passwd && [ "$(getent passwd ${UID})" == "" ]; then adduser --system --uid "${UID}" --ingroup "${GROUP}" --home "/home" --shell /bin/bash "${USER}"; fi
+ && export DEBIAN_FRONTEND=noninteractive \
+ && apt-get update -qq --yes \
+ && apt-get install -qq --no-install-recommends --yes \
+  certbot \
+  cron \
+ >/dev/null \
+ && apt-get autoremove --yes >/dev/null \
+ && apt-get clean autoclean >/dev/null
+
+RUN set -x \
+  && rm -rf /etc/nginx \
+  && rm -rf /etc/cron.d/certbot \
+  && touch /var/log/cron.log \
+  && mkdir -p /var/lib/nginx/logs \
+  && ln -sf /dev/stdout /var/lib/nginx/logs/access.log \
+  && ln -sf /dev/stderr /var/lib/nginx/logs/error.log \
+  && rm -rf /usr/share/nginx/html/*
 
 COPY config/docker/nginx/files /
 
-RUN set -x \
-  && mkdir -p /home/$USER \
-  && mkdir -p /var/lib/nginx/logs \
-  && mkdir -p /var/cache/nginx \
-  && touch /var/lib/nginx/logs/access.log \
-  && touch /var/lib/nginx/logs/error.log \
-  && ln -sf /dev/stdout /var/lib/nginx/logs/access.log \
-  && ln -sf /dev/stderr /var/lib/nginx/logs/error.log \
-  && chown $UID:$GID -R /home/$USER \
-  && chown $UID:$GID -R /var/lib/nginx \
-  && chown $UID:$GID -R /var/cache/nginx
-
-USER $UID:$GID
-
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD set -x \
+  && cron \
+  && nginx -g 'daemon off;'
