feat: redirect from the legacy domains to `pangenome.org`

--- a/config/docker/nginx/files/etc/nginx/https.conf
+++ b/config/docker/nginx/files/etc/nginx/https.conf
@@ -1,17 +1,8 @@
 server {
-  server_name _;
+  server_name pangenome.org;
   listen 44443 ssl http2;
 
-  ssl_certificate /etc/letsencrypt/live/pangenome.org/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/pangenome.org/privkey.pem;
-  ssl_trusted_certificate /etc/letsencrypt/live/pangenome.org/fullchain.pem;
-
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_timeout 10m;
-  ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!LOW:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4:!EXP:!SRP:!DSS;
-  ssl_prefer_server_ciphers on;
-  proxy_ssl_session_reuse on;
+  include include/ssl.conf;
 
   include include/security-headers.conf;
 
