--- a/config/docker/nginx/files/etc/nginx/nginx.conf
+++ b/config/docker/nginx/files/etc/nginx/nginx.conf
@@ -20,8 +20,11 @@ http {
   # Serve certbot's ACME challenge for SSL certificates renewal.
   include http.conf;
 
+  # Redirect from old domains
+  include redirects.conf;
+
   # Serves the app over `https://`.
-  # This line will be uncommented by `cerbot.sh` script when certificates 
+  # This line will be uncommented by `cerbot.sh` script when certificates
   # are generated for the first time
   # include https.conf;
 }
