fix: avoid errors on first boot without ssl certs

--- a/config/docker/nginx/files/etc/nginx/https.conf
+++ b/config/docker/nginx/files/etc/nginx/https.conf
@@ -1,8 +1,8 @@
 server {
   server_name pangenome.org;
-  listen 44443 ssl http2;
+  # listen 44443 ssl http2;
 
-  include include/ssl.conf;
+  # include include/ssl.conf;
 
   include include/security-headers.conf;
 
