--- a/config/docker/nginx/files/etc/nginx/redirects.conf
+++ b/config/docker/nginx/files/etc/nginx/redirects.conf
@@ -1,9 +1,9 @@
 server {
   server_name pangenome.ch pangenome.de pangenome.tuebingen.mpg.de;
   listen 8080;
-  listen 44443 ssl http2;
+  # listen 44443 ssl http2;
 
-  include include/ssl.conf;
+  # include include/ssl.conf;
 
   return 301 $scheme://pangenome.org$request_uri;
 }
