--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "pan-genome-visualization",
   "private": true,
   "scripts": {
-    "html": "rm -rf public/*.html && node ./scripts/renderPageHtml.js && node ./scripts/renderPathogenHtml.js",
-    "build": "NODE_ENV=production npm run build:webpack && NODE_ENV=production npm run build:gulp",
+    "build": "NODE_ENV=production npm run build:webpack && NODE_ENV=production npm run build:gulp && NODE_ENV=production npm run build:html",
     "build:webpack": "NODE_ENV=production webpack --env production",
     "build:gulp": "NODE_ENV=production gulp",
-    "start": "NODE_ENV=production node ./bin/www"
+    "build:html": "rm -rf public/*.html && node ./scripts/renderPageHtml.js && node ./scripts/renderPathogenHtml.js",
+    "start": "NODE_ENV=production serve --cors --listen=tcp://0.0.0.0:8000 --no-clipboard --no-port-switching public/"
   },
   "dependencies": {
     "body-parser": "1.13.2",
@@ -49,6 +49,7 @@
     "gulp-minify-css": "1.2.4",
     "gulp-rename": "1.2.2",
     "gulp-uglify": "3.0.2",
+    "serve": "14.0.1",
     "webpack": "2.2.1",
     "webpack-dev-middleware": "1.10.1",
     "webpack-hot-middleware": "2.17.1"
