--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel": "6.23.0",
     "babel-preset-env": "1.7.0",
     "datatables.net-colreorder": "1.3.3",
+    "dotenv": "4.0.0",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-minify-css": "1.2.4",
