--- a/package.json
+++ b/package.json
@@ -36,15 +36,19 @@
     "svg-pan-zoom": "3.5.0"
   },
   "devDependencies": {
+    "allow-methods": "4.1.1",
     "babel": "6.23.0",
     "babel-preset-env": "1.7.0",
     "dotenv": "4.0.0",
+    "express": "4.18.1",
+    "express-static-gzip": "2.1.7",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-minify-css": "1.2.4",
     "gulp-rename": "1.2.2",
     "gulp-uglify": "3.0.2",
     "jade": "1.11.0",
+    "morgan": "1.10.0",
     "serve": "14.0.1",
     "webpack": "2.2.1",
     "webpack-dev-middleware": "1.10.1",
