--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,6 @@ jobs:
     steps:
       - name: Check requirements
         run: |
-          : ${AWS_ACCESS_KEY_ID?"Environment variable is required"}
-          : ${AWS_SECRET_ACCESS_KEY?"Environment variable is required"}
-          : ${AWS_DEFAULT_REGION?"Environment variable is required"}
-          : ${AWS_S3_BUCKET?"Environment variable is required"}
-          : ${AWS_CLOUDFRONT_DISTRIBUTION_ID?"Environment variable is required"}
           : ${DATA_ROOT_URL?"Environment variable is required"}
 
       - name: Checkout source code
@@ -51,6 +46,14 @@ jobs:
       - name: Build
         run: |
           npm run build
+
+      - name: Check requirements
+        run: |
+          : ${AWS_ACCESS_KEY_ID?"Environment variable is required"}
+          : ${AWS_SECRET_ACCESS_KEY?"Environment variable is required"}
+          : ${AWS_DEFAULT_REGION?"Environment variable is required"}
+          : ${AWS_S3_BUCKET?"Environment variable is required"}
+          : ${AWS_CLOUDFRONT_DISTRIBUTION_ID?"Environment variable is required"}
 
       - name: Clear bucket
         run: |
