--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-uglify": "3.0.2",
     "jade": "1.11.0",
     "morgan": "1.10.0",
+    "node-fetch": "2.6.7",
     "serve": "14.0.1",
     "webpack": "2.2.1",
     "webpack-dev-middleware": "1.10.1",
