chore(ci): adjust deployment process and infra to serve compressed app

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATA_ROOT_URL=https://data.master.pangenome.org
+
+AWS_S3_BUCKET="xxxxxxxxxxxxxxxxxxxx"
+AWS_CLOUDFRONT_DISTRIBUTION_ID="XXXXXXXXXXXXXX"
