chore: use brotli compression in the app

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,8 +55,8 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update -qq --yes
-          sudo apt-get install -qq --yes --verbose-versions pigz rename
+          sudo apt-get update -qq --yes >/dev/null
+          sudo apt-get install -qq --yes brotli pigz rename >/dev/null
 
       - name: Install NPM dependencies
         run: |
@@ -88,74 +88,4 @@ jobs:
       - name: Precompress files
         if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
         run: |
-          pigz -dfrq public/ || true
-          pigz -kfrq public/
-
-      - name: Upload non-compressed non-HTML files
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          aws s3 sync \
-            --delete \
-            --only-show-errors \
-            --cache-control "max-age=2592000, public" \
-            --metadata-directive REPLACE \
-            --exclude "*.git*" \
-            --exclude "*.html" \
-            --exclude "*.gz" \
-            "public/" "s3://${AWS_S3_BUCKET}/"
-
-      - name: Upload compressed non-HTML files
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          aws s3 sync \
-            --delete \
-            --only-show-errors \
-            --cache-control "max-age=2592000, public" \
-            --content-encoding=gzip \
-            --metadata-directive REPLACE \
-            --exclude "*" \
-            --include "*.gz" \
-            --exclude "*.git*" \
-            --exclude "*.html.gz" \
-            "public/" "s3://${AWS_S3_BUCKET}/"
-
-      - name: Remove non-HTML files
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          find public/ -type f \( ! -iname "*.html" -a ! -iname "*.html.gz" \) -exec rm {} \+
-          rename --filename 's/\.html//' public/*.html || true
-          rename --filename 's/\.html//' public/*.html.gz || true
-
-      - name: Upload non-compressed HTML files
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          aws s3 sync \
-            --delete \
-            --only-show-errors \
-            --content-type "text/html" \
-            --cache-control "max-age=86400, public" \
-            --metadata-directive REPLACE \
-            --exclude "*.*" \
-            "public/" "s3://${AWS_S3_BUCKET}/"
-
-      - name: Upload compressed HTML files
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          aws s3 sync \
-            --delete \
-            --only-show-errors \
-            --content-type "text/html" \
-            --cache-control "max-age=86400, public" \
-            --content-encoding=gzip \
-            --metadata-directive REPLACE \
-            --exclude "*" \
-            --include "*.gz" \
-            --exclude "*.*.gz" \
-            "public/" "s3://${AWS_S3_BUCKET}/"
-
-      - name: Invalidate AWS Cloudfront cache
-        if: endsWith(github.ref, '/static-app') || endsWith(github.ref, '/release')
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} \
-            --paths "/*"
+          ./scripts/deploy_app.sh
