feat: add plausible analytics

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATA_ROOT_URL=https://data.master.pangenome.org
 
+PLAUSIBLE_IO_DOMAIN=master.pangenome.org
+
 AWS_S3_BUCKET="xxxxxxxxxxxxxxxxxxxx"
 AWS_CLOUDFRONT_DISTRIBUTION_ID="XXXXXXXXXXXXXX"
