--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:webpack": "NODE_ENV=production webpack --env production",
     "build:gulp": "NODE_ENV=production gulp",
     "build:html": "rm -rf public/*.html && node ./scripts/renderPageHtml.js && node ./scripts/renderPathogenHtml.js",
-    "start": "NODE_ENV=production serve --cors --listen=tcp://0.0.0.0:8000 --no-clipboard --no-port-switching public/"
+    "start": "NODE_ENV=production node ./scripts/server.js public/"
   },
   "dependencies": {
     "bootstrap": "3.3.7",
@@ -50,7 +50,6 @@
     "jade": "1.11.0",
     "morgan": "1.10.0",
     "node-fetch": "2.6.7",
-    "serve": "14.0.1",
     "webpack": "2.2.1",
     "webpack-dev-middleware": "1.10.1",
     "webpack-hot-middleware": "2.17.1"
